# zero

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: build-android.sh  setup-android.sh
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  config.rs  hermes.rs  lib.rs  pipeline.rs  stt.rs  tts.rs  wakeword.rs
