[package]
name = "zero"
version = "0.1.0"
description = "Zero - AI voice assistant (Tauri)"
authors = ["zero"]
edition = "2021"

[lib]
name = "zero_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "zero"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }
rustls = "0.23"
futures = "0.3"
async-trait = "0.1"

# audio
cpal = "0.15"
hound = "3.5"
rubato = "0.15"
# TTS playback
rodio = "0.19"

# wake word + audio processing
rustfft = "6.2"
realfft = "3.3"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# utils
anyhow = "1"
thiserror = "1"
once_cell = "1"
dirs = "5"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
which = "6"

# SSH (for fallback hermes connection)
russh = "0.44"
russh-keys = "0.44"

[target.'cfg(target_os = "android")'.dependencies]
# Android-specific bits
tauri = { version = "2", features = ["tray-icon"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
